src/objects/Movie__c.object
<CustomObject>
    <fields>
        <fullName>Director__c</fullName>
        <label>Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShowTime__c</fullName>
        <label>ShowTime</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Theme</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToStar__c</fullName>
        <label>ToStar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Movie</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Movie Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>